[package]
name = "a2a-rs"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of the A2A (Agent-to-Agent) protocol"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"


[package.metadata.docs.rs]
# Optional: configure docs.rs settings
publish = ["github-packages"]
