[package]
name = "a2a-rs"
version = "0.2.8"
edition = "2024"
description = "Rust implementation of the A2A (Agent-to-Agent) protocol"
license = "MIT"
publish = ["kellnr"]

[package.metadata.protocol]
name = "A2A"
version = "0.2.6"
specification_url = "https://a2a-protocol.org/v0.2.6/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"